Add responsive custom sound/volume to options

--- a/src/options.html
+++ b/src/options.html
@@ -122,7 +122,8 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="row align-items-center ms-4">
+                                <div class="row align-items-center ms-4"
+                                    data-hidden-until="notification-sound">
                                     <div class="col">
                                         <p class="text-muted mb-0">Volume</p>
                                     </div>
@@ -133,7 +134,8 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="row align-items-center ms-4">
+                                <div class="row align-items-center ms-4"
+                                    data-hidden-until="notification-sound">
                                     <div class="col">
                                         <p class="text-muted mb-0">Custom Sound</p>
                                     </div>
