feat(settings): add tracking errors setting and integrate with submission service

--- a/src/options.html
+++ b/src/options.html
@@ -95,6 +95,24 @@
                                     </div>
                                 </div>
                             </div>
+
+                            <!-- Extension Errors -->
+                            <div class="list-group-item">
+                                <div class="row align-items-center">
+                                    <div class="col">
+                                        <strong class="mb-0">Extension Errors</strong><em> (Passive)</em>
+                                        <p class="text-muted mb-0">
+                                            Extension errors and exceptions encountered during usage.
+                                        </p>
+                                    </div>
+                                    <div class="col-auto">
+                                        <div class="form-check form-switch">
+                                            <input class="form-check-input" type="checkbox" role="switch"
+                                                data-setting-name="tracking-errors" data-setting-type="bool" />
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
 
